# WaternetNautonomous

./: .gitignore  .gitmodules  .gitmodules.backup
depthimage_to_laserscan/src/: DepthImageToLaserScan.cpp  DepthImageToLaserScan.cpp~
gps_umd/gps_common/: CMakeLists.txt  CMakeLists.txt~
nautonomous_cooperation_bluetooth_node/: CMakeLists.txt  package.xml
nautonomous_cooperation_bluetooth_node/launch/: bluetooth.launch  bluetooth_operator.launch  tele_operator.launch
nautonomous_cooperation_bluetooth_node/src/: BTSerialPortBinding.cpp  BluetoothCommunicator.cpp  BluetoothManager.cpp  DeviceINQ.cpp  Enums.cpp  NavigationCommunicator.cpp  NavigationListener.cpp  OperatorListener.cpp
nautonomous_navigation/: CMakeLists.txt  package.xml
nautonomous_navigation/launch/: .bmpw  costmap.launch  costmap.launch~  move_base.launch  (+4 more)
nautonomous_operation_action_client/: CMakeLists.txt  CMakeLists.txt~  package.xml
nautonomous_output_conveyor_control/: CMakeLists.txt  package.xml
nautonomous_output_operator_lowlevel/: CMakeLists.txt  CMakeLists.txt~  package.xml
nautonomous_output_selector_multiplexer/: CMakeLists.txt  package.xml
nautonomous_output_send_actuation/: CMakeLists.txt  package.xml
nautonomous_propulsion_sim/: CMakeLists.txt  package.xml
nautonomous_tf/: CMakeLists.txt  package.xml
nautonomous_zed/: CMakeLists.txt  package.xml
src/: mainpage.md
src/nautonomous_dynamic_tf/: CMakeLists.txt  package.xml
src/nautonomous_dynamic_tf/src/: dynamic_tf.cpp
src/nautonomous_system_identification_actuation/: CMakeLists.txt  package.xml
(+181 files in other folders)
